# node-example

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/eu/sisik/nodeexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: main.js
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/java/eu/sisik/nodeexample/: MainActivity.java  NodeService.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/eu/sisik/nodeexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nodelib/: build.gradle
nodelib/src/androidTest/java/eu/sisik/nodelib/: ExampleInstrumentedTest.java
nodelib/src/main/: AndroidManifest.xml
nodelib/src/main/res/values/: strings.xml
nodelib/src/test/java/eu/sisik/nodelib/: ExampleUnitTest.java
